--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,36 @@
-src/ui/node_modules/
-.netlify
-*.icloud
-*.icloud
-*.png
-*.png
-*.png
-*.icloud
-*.icloud
-*.lock
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+node_modules
+.pnp
+.pnp.js
+
+# testing
+coverage
+
+# next.js
+.next
+out
+
+# production
+build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+flow.secret.json
+*.private.json
+*.bak
